Post some updates

--- a/mss.tex
+++ b/mss.tex
@@ -31,6 +31,7 @@
 \thispagestyle{firststyle}
 
 \begin{abstract}
+\noindent \sloppy
 Floating-point calculations are critical to a number of special domains in modern computing, including machine learning, graphics, and scientific computing.  Numerical calculations are particularly susceptible to opaque and system-local optimizations, which can break certain guarantees for deterministic computers.  We consider the background and implementation of IEEE 754 floating-point arithmetic and options for implementing mathematics compatibly with fully reproducible and portable computing.  We consider hardware-based and software-based proposals.
 \end{abstract}
 
@@ -39,7 +40,7 @@ Floating-point calculations are critical to a number of special domains in moder
 \section{Introduction}
 
 \begin{quote}
-Floating-point operations are a technically complex subject and the extent to which developers or source code alter or test this information will depend on many factors. Apart from the general exhortation to developers to be careful and to make sure they know what they are doing, there is little of practical use that can be recommended.  \citep[p.~197]{Jones2008}
+Floating-point operations are a technically complex subject and the extent to which developers or source code alter or test this information will depend on many factors. Apart from the general exhortation to developers to be careful and to make sure they know what they are doing, there is little of practical use that can be recommended.  \citetext{(\citet{Jones2008}, p.~197)}
 \end{quote}
 
 Modern digital computers deal, at their root, in binary representation, entirely zeros and ones.\footnote{Analog computers may operate on a continuum of value.  Computer logic systems may be architected on other numeric bases for their logic, such as the 1837 Analytical Engine's decimal system and the 1958 Setun's (Сетунь) ternary system.}  These are often formally considered to be whole numbers in a number base of two.  However, numerical calculations very frequently require the use of numbers with a fractional part to adequately represent the elements of a computation.
@@ -50,11 +51,13 @@ On the other hand, deterministic computing describes the ability for a given com
 
 \section{A Derivation of the Real Numbers}
 
+\sloppy
 Binary computer values are at root easily represented as non-negative integers.  However, it is frequently convenient when working with human applications to either use other numeric bases (notably decimal and hexadecimal) or to permit non-integer mathematics.
 
-In the historical development of mathematics, logical problems in each set of numbers drove the discovery and elaboration of more elaborate algebras.  For instance, in the field of natural numbers $\mathbb{N}$, the operation of addition ($+$) or multiplication ($\times$) produces a value within the set; however, permitting subtraction ($-$) of a larger number from a smaller number can result in a value inexpressible in $\mathbb{N}$.  This motivated the introduction of the integers $\mathbb{Z}$, augmenting the numbers from zero to (positive) infinity with the negative numbers.  Division ($/$) similarly produced a crisis when applied to values which did not have a whole-number ratio between them, a situation resolved by the Pythagorean\footnote{A legendary attribution, alas, predicated on the Pythagorean discovery of the irrational numbers as a separate class thereby inducing a crisis.  https://plato.stanford.edu/entries/pythagoras/} innovation of the rational numbers or fractions as a class $\mathbb{Q}$.  Ultimately, the common reference set for engineering mathematics (and the human understanding of the continuum such as measurement) is the set of real numbers.  The set of real numbers, denoted by $\mathbb{R}$, is characterized by its continuity, implying that for any two distinct values within this set, there exists a difference, no matter how small.
+In the historical development of mathematics, logical problems in each set of numbers drove the discovery and elaboration of more elaborate algebras.  For instance, in the field of natural numbers $\mathbb{N}$, the operation of addition $+$ or multiplication $\times$ produces a value within the set; however, permitting subtraction $-$ of a larger number from a smaller number can result in a value inexpressible in $\mathbb{N}$.  This motivated the introduction of the integers $\mathbb{Z}$, augmenting the numbers from zero to (positive) infinity with the negative numbers.  Division $/$ similarly produced a crisis when applied to values which did not have a whole-number ratio between them, a situation resolved by the Pythagorean\footnote{A legendary attribution, alas, predicated on the Pythagorean discovery of the irrational numbers as a separate class thereby inducing a crisis.  https://plato.stanford.edu/entries/pythagoras/} innovation of the rational numbers or fractions as a class $\mathbb{Q}$.  Ultimately, the common reference set for engineering mathematics (and the human understanding of the continuum such as measurement) is the set of real numbers.  The set of real numbers, denoted by $\mathbb{R}$, is characterized by its continuity, implying that for any two distinct values within this set, there exists a difference, no matter how small.
 
-Since the operations and conventions of $\mathbb{R}$ have been found to be so useful, it is desirable to extend the semantics to computer programming.  However, digital computers, by virtue of their binary representation, effectively use natural numbers $\mathbb{N}$ to represent numbers (to the limit of memory rather than positive infinity $+\infty$).  Several schemes permit a computer integer to be interpreted as if it were a number with a fractional part, including a scaling factor, fixed-point representation,\footnote{Hand-in-hand with the development of linear algebra, machines such as ENIAC and MANIAC were employed in the 1940s for solving thermonuclear reaction calculations and neutron diffusion equations.  Under the direction of John von Neumann, it appears that some calculations did experimentally involve a floating-point scheme, although this was later rejected definitively in favor of fixed-point arithmetic.  \citep[p.~3]{Kahan1997a}} and floating-point representations.
+\sloppy
+Since the operations and conventions of $\mathbb{R}$ have been found to be so useful, it is desirable to extend the semantics to computer programming.  However, digital computers, by virtue of their binary representation, effectively use natural numbers $\mathbb{N}$ to represent numbers (to the limit of memory rather than positive infinity $+\infty$).  Several schemes permit a computer integer to be interpreted as if it were a number with a fractional part, including a scaling factor, fixed-point representation,\footnote{Hand-in-hand with the development of linear algebra, machines such as ENIAC and MANIAC were employed in the 1940s for solving thermonuclear reaction calculations and neutron diffusion equations.  Under the direction of John von Neumann, it appears that some calculations did experimentally involve a floating-point scheme, although this was later rejected definitively in favor of fixed-point arithmetic.  See \citetext{(\citet{Kahan1997a}, p.~3)} on floating-point representations.}
 
 The basic concept of floating point arithmetic is that it permits the representation of a discrete subset of $\mathbb{R}$ by composing a significand, a base, and an exponent.  The significand is the set of significant digits, possibly including the sign; the base is the understood number base (typically 2); and the exponent is the power to which that base is put before multiplying by the significand to yield the result.\footnote{Compare so-called “engineering” notation, such as \texttt{1e5} for 10,000, which compactly represents the significand 1 and the exponent 5 with an understood base of 10 indicated by \texttt{e} and a sign, implicit for positive.}  The most ubiquitous floating-point format in use today is defined by the IEEE 754 standard, but certain hardware platforms such as GPUs utilize alternative floating-point arithmetic representations.\footnote{We cite \texttt{bfloat16} \citep{Wang2019} and TensorFloat-32 \citep{Kharva2020}, among others.}
 
@@ -65,7 +68,7 @@ To summarize, given an abstract description of a floating point system, there ar
 
 Early computer systems with floating-point units chose bespoke but incompatible representations, ultimately leading to the IEEE 754 (primarily architected by William Kahan).  IEEE 754 reconciled considerations from many floating-point implementations across hardware manufacturers into an internally consistent set of fixed-width representations.\footnote{We ignore the decimal representations introduced in IEEE 754-2008, which do not materially change our argument.}  For instance, the 32-bit “single precision” C \texttt{float}/Fortran \texttt{REAL*4} specification denotes particular bit positions as meaningful,
 
-\begin{lstlisting}[style=listingcode]
+\begin{lstlisting}[style=listingblock]
 SEEE.EEEE.EFFF.FFFF.FFFF.FFFF.FFFF.FFFF
 \end{lstlisting}
 \noindent
@@ -75,7 +78,7 @@ $$
 (-1)^{\texttt{S}} \times 2^{\texttt{E}-127} \times 1.\texttt{F}
 $$
 \noindent
-IEEE 754 specifies operations between numbers, including of different magnitudes.  The standard dictates behavior and provides outlines for arithmetic, but leaves algorithmic details to the implementation.  Numbers are normalized by adjusting the exponent of the smaller operand and aligning the significands, then the operations are carried out.  In practice, extended precision values are used in the intermediate steps of many algorithms, leading to greater accuracy than would otherwise be expected.\footnote{“Each of the computational operations that return a numeric result specified by this standard shall be performed as if it first produced an intermediate result correct to infinite precision and with unbounded range, and then rounded that intermediate result, if necessary, to fit in the destination’s format.”  \citep{IEEE754-2008}  Note that, per \citeauthor{Risse2016}, “there is no indication whether or not a computation with IEEE 754 is exact even if all arguments are.”  The ISO/IEC9899 C standard confesses its own fallibility:  “The floating-point model is intended to clarify the description of each floating-point characteristic and does not require the floating-point arithmetic of the implementation to be identical” \citep[fn.~21]{ISO9899}.}
+IEEE 754 specifies operations between numbers, including of different magnitudes.  The standard dictates behavior and provides outlines for arithmetic, but leaves algorithmic details to the implementation.  Numbers are normalized by adjusting the exponent of the smaller operand and aligning the significands, then the operations are carried out.  In practice, extended precision values are used in the intermediate steps of many algorithms, leading to greater accuracy than would otherwise be expected.\footnote{“Each of the computational operations that return a numeric result specified by this standard shall be performed as if it first produced an intermediate result correct to infinite precision and with unbounded range, and then rounded that intermediate result, if necessary, to fit in the destination’s format.”  \citep{IEEE754-2008}  Note that, per \citeauthor{Risse2016}, “there is no indication whether or not a computation with IEEE 754 is exact even if all arguments are.”  The ISO/IEC9899 C standard confesses its own fallibility:  “The floating-point model is intended to clarify the description of each floating-point characteristic and does not require the floating-point arithmetic of the implementation to be identical” \citetext{(\citet{ISO9899}, fn.~21)}.}
 % https://www.iso.org/obp/ui/#iso:std:iso-iec:9899:ed-4:v1:en
 
 Since the IEEE 754 floating-point format packs values of different kind together bitwise, conventional integer operations such as left shift (\texttt{<<}) and addition (\texttt{+}) do not trivially apply.\footnote{For instance, left-shifting \texttt{1.0} does not result in \texttt{2.0} but \texttt{1.7014118e38}; we leave the mathematics of why as an exercise to the reader.}
@@ -121,7 +124,7 @@ This is multipled by the the result of the exponent \texttt{E} and the bias, mea
 However, for normalized numbers, or numbers that are left-shifted or right-shifted in order to carry out a calculation, values are determined by the \emph{relative shift} in exponent $\Delta\texttt{E}$.  For $\texttt{E} = 2$, for instance, the difference between serial values is $2^{-21}$.  This variable precision means that the precision of floating-point values varies across the range of representable numbers when operations take place.  Operations between two numbers of fairly different precisions are particularly vulnerable to accuracy loss, although some numerical techniques can be employed to mitigate.
 % https://www.h-schmidt.net/FloatConverter/IEEE754.html
 
-Truncation error results from terminating repeating “binaries” (by analogy with “decimals”).  Just as $\frac{1}{3} = 0.\bar{3} = 0.3333…$ has a finite precision when written in base-10, numbers that are not precise powers of two result in repeating fractions.  These necessarily terminate at the resolution of the significand.  The number and nature of truncation and rounding can significantly affect the accuracy of floating-point arithmetic and algorithms \citep{Izquierdo2006}.
+Truncation error results from terminating repeating “binaries” (by analogy with “decimals”).  Just as $\frac{1}{3} = 0.\bar{3} = 0.3333\ldots{}$ has a finite precision when written in base-10, numbers that are not precise powers of two result in repeating fractions.  These necessarily terminate at the resolution of the significand.  The number and nature of truncation and rounding can significantly affect the accuracy of floating-point arithmetic and algorithms \citep{Izquierdo2006}.
  
 \paragraph{Machine epsilon.}
 
@@ -168,7 +171,7 @@ Several aspects of IEEE 754 are optional or advisory, including:
 \begin{enumerate}
   \item  Exception handling means that the hardware may specify rounding via an overflow flag.
   \item  Extended precisions formats are not a huge deal to leave out, but extended precision arithmetic (used for intermediate results) can materially change results.
-  \item  Subnormals are optional;\footnote{Subnormals are a convention that allows values smaller than the “normal” IEEE 754 smallest non-zero value.  They permit a graceflow underflow behavior, and can prevent an unintentional division by zero.} some platforms may flush them to zero or (worse) allow subnormal support to be disabled in certain cases.\footnote{“Some processors do not support subnormal numbers in hardware” \citep[p.~338]{Jones2008}.  (The risk is that this permits inadvertent division by zero.)  Various chipsets solve this exceptional behavior differently.}
+  \item  \sloppy Subnormals are optional;\footnote{Subnormals are a convention that allows values smaller than the “normal” IEEE 754 smallest non-zero value.  They permit a graceflow underflow behavior, and can prevent an unintentional division by zero.} some platforms may flush them to zero or (worse) allow subnormal support to be disabled in certain cases.\footnote{“Some processors do not support subnormal numbers in hardware” \citetext{(\citet{Jones2008}, p.~338)}.  (The risk is that this permits inadvertent division by zero.)  Various chipsets solve this exceptional behavior differently.}
 \end{enumerate}
 
 \subparagraph{Omissions.}
@@ -179,9 +182,9 @@ Whether something is a gap or optional is something of a philosophical question 
 
 Failure to implement IEEE 754 correctly may happen inadvertently, as with the Pentium FDIV bug in the 1990s \citep{Edelman1997}.  Alternatively, chipset designers may deviate from the specification for reasons of performance or limitations in the architecture.
 
-For instance, IEEE 754 defines a range of numbers as “not-a-number” values, or NaNs.  Per the specification, a NaN can be a signalling NaN, meaning that it intends to flag and possibly disrupt a problematic computation;\footnote{“C support for signaling NaNs, or for auxiliary information that could be encoded in NaNs, is problematic.  Trap handling varies widely among implementations. Implementation mechanisms may trigger signaling NaNs, or fail to, in mysterious ways.  The IEC 60559 floating-point standard recommends that NaNs propagate; but it does not require this and not all implementations do.”  \citep[p.~339]{Jones2008}} or a quiet NaN, which does not raise such an exception and merely yields a result with the NaN propagated to the final result.\footnote{In Urbit, the Vere runtime unifies NaNs, meaning that any bitwise information which may be encoded in the significand field—the “NaN payload”—is thrown away.}  Not all processors implement this part of IEEE 754 correctly:  “The Motorola DSP563CCC does not support NaNs or infinities.  Floating-point arithmetic operations do not overflow to infinity; they saturate at the maximum representable value” \citep[p.~338]{Jones2008}.
+For instance, IEEE 754 defines a range of numbers as “not-a-number” values, or NaNs.  Per the specification, a NaN can be a signalling NaN, meaning that it intends to flag and possibly disrupt a problematic computation;\footnote{“C support for signaling NaNs, or for auxiliary information that could be encoded in NaNs, is problematic.  Trap handling varies widely among implementations. Implementation mechanisms may trigger signaling NaNs, or fail to, in mysterious ways.  The IEC 60559 floating-point standard recommends that NaNs propagate; but it does not require this and not all implementations do.”  \citetext{(\citet{Jones2008}, p.~339)}} or a quiet NaN, which does not raise such an exception and merely yields a result with the NaN propagated to the final result.\footnote{In Urbit, the Vere runtime unifies NaNs, meaning that any bitwise information which may be encoded in the significand field—the “NaN payload”—is thrown away.}  Not all processors implement this part of IEEE 754 correctly:  “The Motorola DSP563CCC does not support NaNs or infinities.  Floating-point arithmetic operations do not overflow to infinity; they saturate at the maximum representable value” \citetext{(\citet{Jones2008}, p.~338)}.
 
-As a further example, fused multiply-add (FMA) ($a \times b + c$) is implemented on certain hardware to favor \texttt{double} operations and not quadruple-precision operations \citep[p.~5]{Kahan1997}.
+As a further example, fused multiply-add (FMA) ($a \times b + c$) is implemented on certain hardware to favor \texttt{double} operations and not quadruple-precision operations \citetext{(\citep{Kahan1997}, p.~5)}.
 %\footnote{While this particular example may not strike the reader as particularly egregious, the existence of deviations from the specification raises the spectre of nondeterminism.}
 
 \subparagraph{Out-of-sequence computations.}
@@ -204,7 +207,7 @@ IEEE 754 floating-point operations take place using one of four rounding modes.
 \noindent
 The rounding mode can affect the result of computations, and if other processes are changing the mode (which can even be set per-thread), results may not be reliably reproducible.
 
-“Obtaining the correctly rounded result of an addition or subtraction operation requires an additional bit in the significand (as provided by the IEC 60559 guard bit) to hold the intermediate result” \citep[p.~65]{Jones2008}.
+“Obtaining the correctly rounded result of an addition or subtraction operation requires an additional bit in the significand (as provided by the IEC 60559 guard bit) to hold the intermediate result” \citetext{(\citet{Jones2008}, p.~65)}.
 
 
 \section{Urbit's Implementation of IEEE 754}
@@ -271,7 +274,7 @@ Why can't we just allow different results in the last binary places of the signi
   \item  F1.  If it's not deterministic, it isn't real.
 \end{enumerate}
 
-Urbit makes much of avoiding the “ball of mud” “standard software architecture” \citep{Foote1999}.  In this design anti-pattern, a lack of guarantees and predictable behavior leads \emph{inevitably} to haphazard and illegible software bloat \citep{Foote1999}.  We can thus understand why Urbit as a platform considers even deviations in the last bit of a significand to be threads fraying the edge of sanity \citet{Monk2020a}:
+Urbit makes much of avoiding the “ball of mud” “standard software architecture” \citep{Foote1999}.  In this design anti-pattern, a lack of guarantees and predictable behavior leads \emph{inevitably} to haphazard and illegible software bloat \citep{Foote1999}.  We can thus understand why Urbit as a platform considers even deviations in the last bit of a significand to be threads fraying the edge of sanity \citep{Monk2020a}:
 
 \begin{quote}
 If you do the same thing twice, your computer should react the same way.  This is comforting.  This is also what makes it easy to reason about and use effectively.  If you're not sure what your computer will do, you'll be afraid of it and act defensively toward it.  This inevitably leads to a big ball of mud.
@@ -283,10 +286,9 @@ For example, consider the expression $(a \times b) + c$.  If a compiler permits 
 
 However, in another example due to \citeauthor{Dawson2013}, FMA yields incorrect results:  for $a \times b + c \times d$ with $a = c$ and $b = -d$, the answer should be zero, and calculated in two steps will typically be zero.  With a fused multiply-add, however, the code becomes \texttt{fmadd(a, b, c*d)}, rounding the multiplication of $c$ and $d$ but not that of $a$ and $b$; the answer will likely not be zero.
 
-The situation grows more ambiguous across architectures.  \citet[p.~346]{Jones2008} presents the pathological case of a compliant platform that may use extended precision bits in the calculation of \texttt{a + b}:
+The situation grows more ambiguous across architectures.  \citetext{\citet{Jones2008}, p.~346,} presents the pathological case of a compliant platform that may use extended precision bits in the calculation of \texttt{a + b}:
 
-\lstset{language=C}
-\begin{lstlisting}
+\begin{lstlisting}[style=listingcode_c]
 #include <stdio.h>
 
 extern double a, b;
@@ -339,17 +341,17 @@ That's the problem.  What are some possible hardware-targeted solutions?
 
 \subsubsection{Control the stack}
 
-If you controlled the compiler and runtime execution stack to a sufficient degree, could you yield deterministic floating-point arithmetic from the hardware?  “A translator that generates very high performance code is of no use if the final behavior is incorrect” \citep[p.~189]{Jones2008}; that is, optimizations often come at the cost of correctness.
+If you controlled the compiler and runtime execution stack to a sufficient degree, could you yield deterministic floating-point arithmetic from the hardware?  “A translator that generates very high performance code is of no use if the final behavior is incorrect” \citetext{(\citet{Jones2008}, p.~189)}; that is, optimizations often come at the cost of correctness.
 
 To start off, what must be considered part of the stack in this sense?  At a minimum, the compiler and linker toolchain (including flags and options) and the actual runtime must be included.  (This explicitly introduces a dependence between Martian software and Earthling software, repugnant to the Urbit ethos.)
 
 We also must decide what the target is.  Do we aim for the most portable configuration (as determined by number of consumer or enterprise users)?  Do we aim for the “closest” to IEEE 754 adherence?  Do we aim for simplicity, or compilation speed, or any of a half-dozen other optimizable variables?
 
-For instance, suppose that one intended to use the C keyword \texttt{volatile} to block certain common optimizations on a floating-point value.\footnote{In any case, this assumes a legible and enumerable set of behaviors for \texttt{volatile} which is, alas, not the case.  “\texttt{volatile} is a hint to the implementation to avoid aggressive optimization involving the object because the value of the object might be changed by means undetectable by an implementation” \citep[p.~472]{Jones2008}.  “Actions on objects so declared shall not be ‘optimized out’ by an implementation or reordered except as permitted by the rules for evaluating expressions” \citep[p.~1500]{Jones2008}.  “The \texttt{volatile} qualifier only indicates that the value of an object may change in ways unknown to the translator (therefore the quality of generated machine code may be degraded because a translator cannot make use of previous accesses to optimize the current access)” \citep[p.~963]{Jones2008}.  The same author provides examples of C code that is ambiguous in \texttt{volatile}'s semantics, pp.~1290–1291; and undefined in \texttt{volatile}'s semantics, pp.~1482–1483.}  The runtime at the level of Nock does not know if a value is considered floating-point or not.  At the level of a jet, the use of \texttt{volatile} can correctly bar certain hardware optimizations, but these need to be carefully enumerated and understood in the light of the other toolchain concerns enumerated in this section.  Strictly speaking, \texttt{volatile} only seeks to guarantee that stale calculations are not inadvertently reused due to optimization.  Without hardware optimization, the utility of an FLU for fast floating-point computations is questionable.  The risk of a jet mismatch remains high, as does a nonportable jet.\footnote{“What constitutes an access to an object that has volatile-qualified type is implementation-defined” \citep[p.~1488]{Jones2008}.  “Volatile-qualified objects can also be affected by translator optimizations” \citep[p.~1490]{Jones2008}.  The C novice may at this point wonder what the intended utility of \texttt{volatile} in fact is:  “[a] \texttt{volatile} declaration may be used to describe an object corresponding to a memory-mapped input/output port or an object accessed by an asynchronously interrupting function” \citep[p.~1499]{Jones2008}.}
+For instance, suppose that one intended to use the C keyword \texttt{volatile} to block certain common optimizations on a floating-point value.\footnote{In any case, this assumes a legible and enumerable set of behaviors for \texttt{volatile} which is, alas, not the case.  “\texttt{volatile} is a hint to the implementation to avoid aggressive optimization involving the object because the value of the object might be changed by means undetectable by an implementation” \citetext{(\citet{Jones2008}, p.~472)}.  “Actions on objects so declared shall not be ‘optimized out’ by an implementation or reordered except as permitted by the rules for evaluating expressions” \citetext{(\citet{Jones2008}, p.~1500)}.  “The \texttt{volatile} qualifier only indicates that the value of an object may change in ways unknown to the translator (therefore the quality of generated machine code may be degraded because a translator cannot make use of previous accesses to optimize the current access)” \citetext{(\citet{Jones2008}, p.~963)}.  The same author provides examples of C code that is ambiguous in \texttt{volatile}'s semantics, pp.~1290–1291; and undefined in \texttt{volatile}'s semantics, pp.~1482–1483.}  The runtime at the level of Nock does not know if a value is considered floating-point or not.  At the level of a jet, the use of \texttt{volatile} can correctly bar certain hardware optimizations, but these need to be carefully enumerated and understood in the light of the other toolchain concerns enumerated in this section.  Strictly speaking, \texttt{volatile} only seeks to guarantee that stale calculations are not inadvertently reused due to optimization.  Without hardware optimization, the utility of an FLU for fast floating-point computations is questionable.  The risk of a jet mismatch remains high, as does a nonportable jet.\footnote{“What constitutes an access to an object that has volatile-qualified type is implementation-defined” \citetext{(\citet{Jones2008}, p.~1488)}.  “Volatile-qualified objects can also be affected by translator optimizations” \citetext{(\citet{Jones2008}, p.~1490)}.  The C novice may at this point wonder what the intended utility of \texttt{volatile} in fact is:  “[a] \texttt{volatile} declaration may be used to describe an object corresponding to a memory-mapped input/output port or an object accessed by an asynchronously interrupting function” \citetext{(\citet{Jones2008}, p.~1499)}.}
 
 Can the C-defined floating-point environment (as supplied by \texttt{fenv.h}) answer to this need?  This affords the ability to specify not only rounding modes and access floating-point exception status flags, but it is not clear whether this environmental control portably spans the entire output of floating-point computations.\footnote{“The floating-point environment access and modification is only meaningful when \texttt{\#pragma STDC FENV\_ACCESS} is set to \texttt{ON}.  \ldots{} In practice, few current compilers, such as HP aCC, Oracle Studio, and IBM XL, support the \texttt{\#pragma} explicitly, but most compilers allow meaningful access to the floating-point environment anyway.” \citep{CPPRef}}
 
-Finally, “[a]n implementation is not required to provide a facility for altering the modes for translation-time arithmetic, or for making exception flags from the translation available to the executing program” \citep[p.~200]{Jones2008}.  The information we purport to gain by controlling the stack in the manner above outlined is possibly not even available to the compiler and the runtime executable.
+Finally, “[a]n implementation is not required to provide a facility for altering the modes for translation-time arithmetic, or for making exception flags from the translation available to the executing program” \citetext{(\citet{Jones2008}, p.~200)}.  The information we purport to gain by controlling the stack in the manner above outlined is possibly not even available to the compiler and the runtime executable.
 
 We suggest that deterministically correct stack control in the sense we have described here is impossible for an arbitrary configuration of the modern hardware stack.\footnote{The possibility of circumscribing the set of permissible IEEE 754 operations, which may afford a different approach to this problem but seems similarly susceptible of shipwreck, is explored in a subsequent section, \emph{quod vide}.}
 
@@ -424,14 +426,14 @@ In this proposal, however, one could imagine a situation like that which obtains
 Instead of repeating computations that have been made in the past, what if we cached the result of all of them, so that any new computations with the same values are guaranteed to result in the same value via a cache lookup instead of a calculation?  Urbit uses memoization frequently in Arvo and in the runtime, so this is an aesthetically compatible option; we consider its feasibility.
 
 \begin{quote}
-A recently proposed hardware acceleration technique is to store the results of previous multiplication and division operations in a cache, reusing rather than recalculating the result whenever possible. (Dynamic profiling has found that a high percentage of these operations share the same operands as previous operations.)  \citep[p.~1148]{Jones2008}\footnote{Cf. Jones' citation of \citeauthor{Citron1998}} %no period for et al.
+A recently proposed hardware acceleration technique is to store the results of previous multiplication and division operations in a cache, reusing rather than recalculating the result whenever possible. (Dynamic profiling has found that a high percentage of these operations share the same operands as previous operations.)  \citetext{(\citet{Jones2008}, p.~1148)}\footnote{Cf. Jones' citation of \citeauthor{Citron1998}} %no period for et al.
 \end{quote}
 
 On Urbit, this introduces an $O(1)$ average-case/$O(n)$ worst-case cache lookup from a MurmurHash3 hash key calculation (what Urbit calls a \lstinline[style=inlinecode]{++mug}).  This must be weighed against the floating-point algorithm in consideration, as well as what is actually hashed (likely the Nock of the calculation contained in the dynamic hint).
 
 This bears some similarities to aspects of the network call suggestion above, in that the second objection to that one holds here.  Event log and state bloat (via the cache) are liabilities.  Such a cache would be a feature of the Arvo instance, not the runtime VM.  Unlike a truncated event log, the cache must be a permanent feature of the ship's state rather than a convenience.
 
-“Storing results” could also be met by the use of SPARC-style logging.  In that hardware platform, suspicious computations are flagged and hashed into a lookup table by site in the originating program.  Such events are logged not by timestamp or by computation hash but by callsite in the originating program \citep[p.~6]{Kahan1997}.\footnote{What constitutes “suspicion” is only sparsely elaborated by Kahan in that article.}  Sun implemented this in SPARC for “retrospective diagnostics” but the technique could allow a more lapidary operation for Urbit.  (Follow-on considerations include whether such computations should now be considered “bound” in a sense like that of the scry namespace.)
+“Storing results” could also be met by the use of SPARC-style logging.  In that hardware platform, suspicious computations are flagged and hashed into a lookup table by site in the originating program.  Such events are logged not by timestamp or by computation hash but by callsite in the originating program \citetext{(\citet{Kahan1997}, p.~6)}.\footnote{What constitutes “suspicion” is only sparsely elaborated by Kahan in that article.}  Sun implemented this in SPARC for “retrospective diagnostics” but the technique could allow a more lapidary operation for Urbit.  (Follow-on considerations include whether such computations should now be considered “bound” in a sense like that of the scry namespace.)
 
 \subsection{Proscribing IEEE 754}
 
@@ -441,7 +443,7 @@ What if the Scylla of IEEE 754 is avoided for some other Charybdis?  We can appr
 
 One solution to the speed-vs.-reproducibility dilemma is to permit hardware-accelerated IEEE 754 operations, but only in a verified subset permissible for jets.  This would require careful vetting of the hardware stack and compiler options to define a permissible subset of IEEE 754 operations as “known good”.  Coupled with the epoch system, it may be a feasible solution.
 
-What degree of vetting will reliably answer the gap between IEEE 754 and hardware implementation for any particular operation?  \citet[pp.~330ff.]{Jones2008} and \citet{Goldberg1991} provide a careful analysis of accuracy errors inherent to IEEE 754 as a standard, but due to the variety of possible scenarios do not treat of real compilers and chipsets much.\footnote{See particularly the note on “Common Implementations” on p.~346 of \citet{Jones2008}.}  Trivially, as demonstrated above in the Python example, $(a + b) + c \neq a + (b + c)$, and even modest reordering of operations by a zealous compiler optimization is susceptible of introducing nonportable and thus nondeterministic (in our sense) behavior.
+What degree of vetting will reliably answer the gap between IEEE 754 and hardware implementation for any particular operation?  \citetext{\citet{Jones2008}, pp.~330ff.} and \citet{Goldberg1991} provide a careful analysis of accuracy errors inherent to IEEE 754 as a standard, but due to the variety of possible scenarios do not treat of real compilers and chipsets much.\footnote{See particularly the note on “Common Implementations” on p.~346 of \citet{Jones2008}.}  Trivially, as demonstrated above in the Python example, $(a + b) + c \neq a + (b + c)$, and even modest reordering of operations by a zealous compiler optimization is susceptible of introducing nonportable and thus nondeterministic (in our sense) behavior.
 
 Having identified an appropriate subset of operations, we may imagine that the use of \texttt{\#ifdef}, Autotools’ \texttt{configure}, and a jetting library may answer to our need.  Any jet library would have to be carefully constructed to avoid imposing tight discipline directly on the end user (modal Hoon author).  We cannot recommend this path today but do not consider the way to be shut, especially given liberal use of \texttt{volatile}.
 
@@ -459,6 +461,7 @@ In 2015, John Gustafson proposed a new standard for representing values drawn fr
 
 Gustafson's criticisms of IEEE 754 focused on determinism and exactness; underflow and overflow; fixed bit widths for mantissa and exponent; rounding; and the large wasted block of NaNs \citep{Risse2016}.  Unums likewise must provide sign, exponent with bias, and significand; they additionally signal whether the value is an interval.  Unlike IEEE 754's use of multiple bit widths, 32-bit posits are argued to be sufficient for almost all applications.
 
+TODO
 \citep{Gustafson2015}
 % https://www.crcpress.com/The-End-of-Error-Unum-Computing/Gustafson/p/book/9781482239867
 \citep{Gustafson2017}
@@ -479,7 +482,7 @@ It may also be worth considering the use of a 3-tuple of sign, exponent, and sig
 \subparagraph{Fixed-point and $\mathbb{Q}$.}
 
 A fixed-point representation differs from a floating-point scheme in that the exponent is fixed by the protocol or metadata and thus only the sign and significand need be included in the bit representation.  (With an offset, even the sign can be elided.)  The advantage of such a scheme is that it affords the benefits of floating-point mathematics at near-integer operation speeds (e.g. left-shift to multiply by two).  One disadvantage is that there is a smallest representable value; this lack of subnormals requires either an underflow handler or the possibility of inadvertent division by zero.  Fixed-point operations could also be used as intermediates in calculations.  (This echoes once again the idea of conversion to an intermediate representation then conversion back out to IEEE 754.)\footnote{“One solution to implementing floating-point types on processors that support fixed-point types is to
-convert the source containing floating-point data operations to make calls to a fixed-point library” \citep[p.~346]{Jones2008}.  Note that the sense of our current interest is reversed.}
+convert the source containing floating-point data operations to make calls to a fixed-point library” \citetext{(\citet{Jones2008}, p.~346)}.  Note that the sense of our current interest is reversed.}
 
 If a rational number scheme is implemented, then a variety of possible implementations are possible, ranging from bitpacked fixed-width integers to pairs of arbitrary-width integers.  Reduction to “simplest” values introduces some overhead; fractions are formally an ordered pair $(a, b)$ with $b \neq 0$, but there is an equivalence class of multiples.  (That is, if we write $\frac{1}{2}$ as $(1, 2)$, we have also to consider $(2, 4)$, $(3, 6)$, indeed an infinite sequence of such ordered pairs.)  Rational numbers are a superset of floating-point numbers and fixed-point numbers, but accrue processing overhead due to dereferencing arbitrary integers and other aspects of computation on operations.
 
